# todolist

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  a.out  not.txt
src/: main.cpp
ui/: index.html  script.js  style.css
